<resources>
    <string name="Sunday">S</string>
    <string name="Monday">M</string>
    <string name="Tuesday">T</string>
    <string name="Wednesday">W</string>
    <string name="Thursday">T</string>
    <string name="Friday">F</string>
    <string name="Saturday">S</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
