<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".components.abstractcalendar.LastFourWeeksFragment"
    >

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/headers">

        <TextView
            android:id="@+id/head0"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:text="@string/Sunday"
            android:gravity="center"
            android:textColor="@color/lastFourWeeksTextColor"
            />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/head1"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:text="@string/Monday"
            android:gravity="center"
            android:textColor="@color/lastFourWeeksTextColor"
            />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/head2"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:text="@string/Tuesday"
            android:gravity="center"
            android:textColor="@color/lastFourWeeksTextColor"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/head3"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:text="@string/Wednesday"
            android:gravity="center"
            android:textColor="@color/lastFourWeeksTextColor"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/head4"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:text="@string/Thursday"
            android:gravity="center"
            android:textColor="@color/lastFourWeeksTextColor"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/head5"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:text="@string/Friday"
            android:gravity="center"
            android:textColor="@color/lastFourWeeksTextColor"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/head6"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:text="@string/Saturday"
            android:gravity="center"
            android:textColor="@color/lastFourWeeksTextColor"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/week0"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headers">

        <com.blauhaus.android.redwood.components.abstractcalendar.DayView
            android:id="@+id/day0"
            android:layout_width="25dp"
            android:layout_height="25dp"
            style="@style/RedwoodDayView"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.blauhaus.android.redwood.components.abstractcalendar.DayView
            android:id="@+id/day1"
            android:layout_width="25dp"
            android:layout_height="25dp"
            style="@style/RedwoodDayView"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.blauhaus.android.redwood.components.abstractcalendar.DayView
            android:id="@+id/day2"
            android:layout_width="25dp"
            android:layout_height="25dp"
            style="@style/RedwoodDayView"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.blauhaus.android.redwood.components.abstractcalendar.DayView
            android:id="@+id/day3"
            android:layout_width="25dp"
            android:layout_height="25dp"
            style="@style/RedwoodDayView"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.blauhaus.android.redwood.components.abstractcalendar.DayView
            android:id="@+id/day4"
            android:layout_width="25dp"
            android:layout_height="25dp"
            style="@style/RedwoodDayView"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.blauhaus.android.redwood.components.abstractcalendar.DayView
            android:id="@+id/day5"
            android:layout_width="25dp"
            android:layout_height="25dp"
            style="@style/RedwoodDayView"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.blauhaus.android.redwood.components.abstractcalendar.DayView
            android:id="@+id/day6"
            android:layout_width="25dp"
            android:layout_height="25dp"
            style="@style/RedwoodDayView"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/week1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/week0">

        <com.blauhaus.android.redwood.components.abstractcalendar.DayView
            android:id="@+id/day7"
            android:layout_width="25dp"
            android:layout_height="25dp"
            style="@style/RedwoodDayView"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.blauhaus.android.redwood.components.abstractcalendar.DayView
            android:id="@+id/day8"
            android:layout_width="25dp"
            style="@style/RedwoodDayView"
            android:layout_height="25dp"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.blauhaus.android.redwood.components.abstractcalendar.DayView
            android:id="@+id/day9"
            android:layout_width="25dp"
            android:layout_height="25dp"
            style="@style/RedwoodDayView"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.blauhaus.android.redwood.components.abstractcalendar.DayView
            android:id="@+id/day10"
            android:layout_width="25dp"
            android:layout_height="25dp"
            style="@style/RedwoodDayView"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.blauhaus.android.redwood.components.abstractcalendar.DayView
            android:id="@+id/day11"
            android:layout_width="25dp"
            android:layout_height="25dp"
            style="@style/RedwoodDayView"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.blauhaus.android.redwood.components.abstractcalendar.DayView
            android:id="@+id/day12"
            android:layout_width="25dp"
            android:layout_height="25dp"
            style="@style/RedwoodDayView"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.blauhaus.android.redwood.components.abstractcalendar.DayView
            android:id="@+id/day13"
            android:layout_width="25dp"
            android:layout_height="25dp"
            style="@style/RedwoodDayView"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/week2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/week1">

        <com.blauhaus.android.redwood.components.abstractcalendar.DayView
            android:id="@+id/day14"
            android:layout_width="25dp"
            android:layout_height="25dp"
            style="@style/RedwoodDayView"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.blauhaus.android.redwood.components.abstractcalendar.DayView
            android:id="@+id/day15"
            android:layout_width="25dp"
            android:layout_height="25dp"
            style="@style/RedwoodDayView"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.blauhaus.android.redwood.components.abstractcalendar.DayView
            android:id="@+id/day16"
            android:layout_width="25dp"
            android:layout_height="25dp"
            style="@style/RedwoodDayView"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.blauhaus.android.redwood.components.abstractcalendar.DayView
            android:id="@+id/day17"
            android:layout_width="25dp"
            android:layout_height="25dp"
            style="@style/RedwoodDayView"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.blauhaus.android.redwood.components.abstractcalendar.DayView
            android:id="@+id/day18"
            android:layout_width="25dp"
            android:layout_height="25dp"
            style="@style/RedwoodDayView"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.blauhaus.android.redwood.components.abstractcalendar.DayView
            android:id="@+id/day19"
            android:layout_width="25dp"
            android:layout_height="25dp"
            style="@style/RedwoodDayView"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.blauhaus.android.redwood.components.abstractcalendar.DayView
            android:id="@+id/day20"
            android:layout_width="25dp"
            android:layout_height="25dp"
            style="@style/RedwoodDayView"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/week3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/week2">

        <com.blauhaus.android.redwood.components.abstractcalendar.DayView
            android:id="@+id/day21"
            android:layout_width="25dp"
            android:layout_height="25dp"
            style="@style/RedwoodDayView"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.blauhaus.android.redwood.components.abstractcalendar.DayView
            android:id="@+id/day22"
            android:layout_width="25dp"
            android:layout_height="25dp"
            style="@style/RedwoodDayView"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.blauhaus.android.redwood.components.abstractcalendar.DayView
            android:id="@+id/day23"
            android:layout_width="25dp"
            android:layout_height="25dp"
            style="@style/RedwoodDayView"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.blauhaus.android.redwood.components.abstractcalendar.DayView
            android:id="@+id/day24"
            android:layout_width="25dp"
            android:layout_height="25dp"
            style="@style/RedwoodDayView"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.blauhaus.android.redwood.components.abstractcalendar.DayView
            android:id="@+id/day25"
            android:layout_width="25dp"
            android:layout_height="25dp"
            style="@style/RedwoodDayView"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.blauhaus.android.redwood.components.abstractcalendar.DayView
            android:id="@+id/day26"
            android:layout_width="25dp"
            android:layout_height="25dp"
            style="@style/RedwoodDayView"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.blauhaus.android.redwood.components.abstractcalendar.DayView
            android:id="@+id/day27"
            android:layout_width="25dp"
            android:layout_height="25dp"
            style="@style/RedwoodDayView"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>